# 2026AI

./: .gitignore  HANDOFF.md  README.md  agent.md  app.py  decision_output.json  pyproject.toml  requirements.txt  run.py
.github/workflows/: test.yml
.streamlit/: config.toml
artifacts/: learned_weights.json  model_comparison.json  training_metrics.json
artifacts/full_bayesian_experiment/: config_snapshot.json  experiment_metrics.json  experiment_report.md  learned_network.json  public_data_metadata.json  runtime.json
config/: experiment.yaml
core/: __init__.py  a_engine_adapter.py  demo_engine.py  qwen_client.py
data/: scenario.json  showcase_cases.json  synthetic_training.json
data/public/: usgs_earthquakes.csv
docs/assets/: agent-workflow.mmd
docs/superpowers/plans/: 2026-06-16-live-emergency-simulation.md  2026-06-16-manual-command-console.md  (+2 more)
examples/: decision_output_fixed_v2.json  decision_output_learned.json  decision_output_learned_v2.json  scenario_input.json
schemas/: decision_output.schema.json  scenario.schema.json
src/emergency_commander/: __init__.py  cli.py  experiment.py  expert_cpts.py  inference.py  pipeline.py  random_scenario.py  replanning.py  simulation.py  training.py  visualization.py
tests/: __init__.py  test_bayesian_network.py  test_cli.py  test_experiment.py  test_input_inference.py  test_json_contracts.py  test_live_simulation.py  test_pipeline_replanning.py  test_random_scenario.py  test_routing_allocation.py  test_routing_v2.py  test_simulation.py  test_training.py  test_visualization.py
(+4 files in other folders)
