[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-emergency-commander"
version = "0.1.0"
description = "Explainable rescue decision pipeline with fixed and learned probability weights"
requires-python = ">=3.11"
dependencies = [
  "jsonschema>=4.23",
  "numpy>=1.26",
  "pandas>=2.2",
  "plotly>=5.24",
  "PyYAML>=6.0",
  "requests>=2.32",
  "scikit-learn>=1.5",
  "streamlit>=1.40",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
emergency-commander = "emergency_commander.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
